# elasticsearch-labs

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  NOTICE  README.md  developer-guide.md  hole.php  requirements-dev.txt
.github/workflows/: docker-chatbot-rag-app.yml  pre-commit.yml  tests.yml
Coding Sessions: YouTube Live/: How to build an advanced semantic search engine with hybrid search
colab-notebooks-examples/generative-ai/: question-answering.ipynb
colab-notebooks-examples/search/: 00-quick-start.ipynb  01-keyword-querying-filtering.ipynb  02-hybrid-search-with-rrf.ipynb  03-ELSER.ipynb  data.json
docker/: README.md  docker-compose-elastic.yml
docs/: CONTRIBUTING.md  SUPPORT.md  api-clients.mdx  chatgpt-workplace-app  clients-overview.mdx  clients-python.mdx  developer-guide.mdx  elasticsearch-labs.docnav.json  genai-faq.mdx  integrations-hugging-face.mdx  integrations-lang-chain.mdx  integrations-llama-index.mdx  integrations-open-ai.mdx  integrations-overview.mdx  notebooks.mdx  overview.mdx  quickstart.mdx  setup.mdx  using-elasticsearch-data-modeling.mdx  using-elasticsearch-filtering.mdx  using-elasticsearch-indexing.mdx  using-elasticsearch-overview.mdx  using-elasticsearch-querying.mdx  using-elasticsearch-relevance.mdx  vector-gen-ai-guide.docnav.json
draft-submissions/doc-clustering/: last_publish.md  last_publish_test.md
esre-examples/: README.md
esre-examples/openai-integration-example-javascript/: README.md  package.json  search_app.js
esre-examples/openai-integration-example-python/: README.md
esre-examples/python-flask-example/: README.md
example-apps/: README.md
example-apps/ElasticDocs_GPT/: README.md
example-apps/ElasticGPT_Plugin/: Dockerfile  README.md
example-apps/OpenAI-embeddings/: LICENSE  README.md
example-apps/Workplace-Search/: Dockerfile  README.md
example-apps/agent-builder-a2a-agent-framework/: Dockerfile  README.md  docker-compose.yml  elastic_agent_builder_a2a.py  env.example  (+1 more)
k8s/: README.md  k8s-manifest-elastic.yml
notebooks/: README.md
supporting-blog-content/: README.md  how-to-use-jina-v2-embeddings.ipynb
supporting-blog-content/langraph-retrieval-agent-template/: Makefile  README.md  langgraph.json  pyproject.toml
supporting-blog-content/langraph-retrieval-agent-template/src/retrieval_graph/: __init__.py  configuration.py  graph.py  prompts.py  retrieval.py  state.py  utils.py
supporting-blog-content/langraph-retrieval-agent-template/tests/integration_tests/: __init__.py  test_graph.py
supporting-blog-content/langraph-retrieval-agent-template/tests/unit_tests/: __init__.py  test_configuration.py
telemetry/: telemetry.py
test/: README.md
test/nbtest/: MANIFEST.in  Makefile  README.md  nbtest.py  pyproject.toml  requirements.in  requirements.txt
test/nbtest/python3-test/: kernel.json
test/nbtest/src/nbtest/: __init__.py  nbtest.py  python3-test-kernel.py
(+1021 files in other folders)
